Revert "fix(LeadSpace): lower z-index of overlay to prevent clash with masthead"
This reverts commit 3dfbe340202f36db6e8f0f7a6cf6a18c085a2bda.

--- a/packages/styles/scss/patterns/sections/leadspace/_leadspace.scss
+++ b/packages/styles/scss/patterns/sections/leadspace/_leadspace.scss
@@ -105,7 +105,7 @@ $btn-min-width: 26;
       justify-content: space-between;
       padding-top: $carbon--layout-03;
       padding-bottom: $carbon--layout-03;
-      z-index: 1;
+      z-index: 2;
       position: absolute;
       top: 0;
       height: 100%;
